--- a/UGame/Config/DefaultEngine.ini
+++ b/UGame/Config/DefaultEngine.ini
@@ -58,9 +58,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +Profiles=(Name="Projectile",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Needs description",bCanModify=True)
 +Profiles=(Name="Enemy",CollisionEnabled=NoCollision,ObjectTypeName="Enemy",CustomResponses=((Channel="Player",Response=ECR_Overlap)),HelpMessage="Needs description",bCanModify=True)
 +Profiles=(Name="Player",CollisionEnabled=QueryOnly,ObjectTypeName="Player",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Enemy",Response=ECR_Overlap)),HelpMessage="Needs description",bCanModify=True)
++Profiles=(Name="ItemTrigger",CollisionEnabled=QueryAndPhysics,ObjectTypeName="itemTrigger",CustomResponses=((Channel="Player",Response=ECR_Overlap)),HelpMessage="Needs description",bCanModify=True)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,Name="Enemy",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,Name="Player",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,Name="itemTrigger",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -124,3 +126,5 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+
