--- a/UGame/Saved/Config/Windows/Engine.ini
+++ b/UGame/Saved/Config/Windows/Engine.ini
@@ -37,10 +37,10 @@ MLSDKPath=(Path="")
 
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
-ToggleKeysHotkey=False
+ToggleKeysHotkey=True
 FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
 
 
